Fixed card alignment and sidebar margin

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -99,11 +99,11 @@ ul {
     transform: translateX(100%);
 }
 .sidebar-links{
-    margin-top: 15%;
     margin: 1% 0;
     justify-content: center;
     align-items: flex-end;
     text-align: end;
+margin-top: 15%;
 }
 .sidebar-links ul li{
     font-family: var(--font-primary);
@@ -555,6 +555,8 @@ text-align: center;
     align-items: center;
     height: 300px;
     justify-content: space-between;
+display: flex;
+flex-flow: column;
 }
 .contact-container .contact-card h3{
     font-size: 1.5rem;
